// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-dropdown example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="menu"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "background": "none",
          "border": "none",
          "borderRadius": 4,
          "boxSizing": "border-box",
          "color": "#1865f2",
          "cursor": "pointer",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "center",
          "margin": 0,
          "outline": "none",
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 0,
          "position": "relative",
          "textDecoration": "none",
          "textOverflow": "ellipsis",
          "userSelect": "none",
          "whiteSpace": "nowrap",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": "bold",
            "lineHeight": "20px",
            "overflow": "hidden",
            "pointerEvents": "none",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Betsy Appleseed
        <svg
          className=""
          height={16}
          style={
            Object {
              "display": "inline-block",
              "marginLeft": 4,
              "verticalAlign": "text-bottom",
            }
          }
          viewBox="0 0 16 16"
          width={16}
        >
          <path
            d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="menu"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "background": "none",
          "border": "none",
          "borderRadius": 4,
          "boxSizing": "border-box",
          "color": "#1865f2",
          "cursor": "pointer",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "center",
          "margin": 0,
          "outline": "none",
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 0,
          "position": "relative",
          "textDecoration": "none",
          "textOverflow": "ellipsis",
          "userSelect": "none",
          "whiteSpace": "nowrap",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": "bold",
            "lineHeight": "20px",
            "overflow": "hidden",
            "pointerEvents": "none",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Assignments
        <svg
          className=""
          height={16}
          style={
            Object {
              "display": "inline-block",
              "marginLeft": 4,
              "verticalAlign": "text-bottom",
            }
          }
          viewBox="0 0 16 16"
          width={16}
        >
          <path
            d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 3 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "maxWidth": 190,
        "minHeight": 0,
        "minWidth": 170,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="listbox"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "border": "none",
          "borderColor": "rgba(33,36,44,0.50)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "color": "#21242c",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "space-between",
          "margin": 0,
          "outline": "none",
          "paddingLeft": 16,
          "paddingRight": 12,
          "position": "relative",
          "textDecoration": "none",
          "whiteSpace": "nowrap",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "color": "rgba(33,36,44,0.50)",
            "display": "block",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Choose a fruit
      </span>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 8,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <svg
        className=""
        height={16}
        style={
          Object {
            "color": "rgba(33,36,44,0.50)",
            "display": "inline-block",
            "minWidth": 16,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
            "whiteSpace": "nowrap",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 4 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="listbox"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "border": "none",
          "borderColor": "rgba(33,36,44,0.50)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "color": "#21242c",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "space-between",
          "margin": 0,
          "outline": "none",
          "paddingLeft": 16,
          "paddingRight": 12,
          "position": "relative",
          "textDecoration": "none",
          "whiteSpace": "nowrap",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Banana juice
      </span>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 8,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <svg
        className=""
        height={16}
        style={
          Object {
            "display": "inline-block",
            "minWidth": 16,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
            "whiteSpace": "nowrap",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 5 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      className=""
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="listbox"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "border": "none",
          "borderColor": "rgba(33,36,44,0.16)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "color": "#21242c",
          "cursor": "auto",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "space-between",
          "margin": 0,
          "outline": "none",
          "paddingLeft": 16,
          "paddingRight": 12,
          "position": "relative",
          "textDecoration": "none",
          "whiteSpace": "nowrap",
        }
      }
      tabIndex={-1}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "color": "rgba(33,36,44,0.32)",
            "display": "block",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Banana juice
      </span>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 8,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <svg
        className=""
        height={16}
        style={
          Object {
            "color": "rgba(33,36,44,0.32)",
            "display": "inline-block",
            "minWidth": 16,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
            "whiteSpace": "nowrap",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 6 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#0a2a66",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "height": 200,
        "justifyContent": "flex-end",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "paddingRight": 10,
        "paddingTop": 10,
        "position": "relative",
        "width": 350,
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": "fit-content",
          "zIndex": 0,
        }
      }
    >
      <button
        className=""
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="listbox"
        style={
          Object {
            "::MozFocusInner": Object {
              "border": 0,
            },
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "border": "none",
            "borderRadius": 4,
            "boxSizing": "border-box",
            "color": "#21242c",
            "display": "inline-flex",
            "height": 40,
            "justifyContent": "space-between",
            "margin": 0,
            "outline": "none",
            "paddingLeft": 16,
            "paddingRight": 12,
            "position": "relative",
            "textDecoration": "none",
            "whiteSpace": "nowrap",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "color": "rgba(33,36,44,0.50)",
              "display": "block",
              "fontFamily": "Lato, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "lineHeight": "20px",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "userSelect": "none",
              "whiteSpace": "nowrap",
            }
          }
        >
          Boba order
        </span>
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 8,
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
        />
        <svg
          className=""
          height={16}
          style={
            Object {
              "color": "rgba(33,36,44,0.50)",
              "display": "inline-block",
              "minWidth": 16,
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "userSelect": "none",
              "verticalAlign": "text-bottom",
              "whiteSpace": "nowrap",
            }
          }
          viewBox="0 0 16 16"
          width={16}
        >
          <path
            d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 7 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 170,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="listbox"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "border": "none",
          "borderColor": "rgba(33,36,44,0.50)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "color": "#21242c",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "space-between",
          "margin": 0,
          "outline": "none",
          "paddingLeft": 16,
          "paddingRight": 12,
          "position": "relative",
          "textDecoration": "none",
          "whiteSpace": "nowrap",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "color": "rgba(33,36,44,0.50)",
            "display": "block",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Color palette
      </span>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 8,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <svg
        className=""
        height={16}
        style={
          Object {
            "color": "rgba(33,36,44,0.50)",
            "display": "inline-block",
            "minWidth": 16,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
            "whiteSpace": "nowrap",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 8 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="listbox"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "border": "none",
          "borderColor": "rgba(33,36,44,0.50)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "color": "#21242c",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "space-between",
          "margin": 0,
          "outline": "none",
          "paddingLeft": 16,
          "paddingRight": 12,
          "position": "relative",
          "textDecoration": "none",
          "whiteSpace": "nowrap",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Sophie
      </span>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 8,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
      <svg
        className=""
        height={16}
        style={
          Object {
            "display": "inline-block",
            "minWidth": 16,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
            "whiteSpace": "nowrap",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-dropdown example 9 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "center",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <button
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato, sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "userSelect": "none",
          "whiteSpace": "nowrap",
        }
      }
    >
      Open modal!
    </span>
  </button>
</div>
`;
